# cmakelib-component-cmutil

./: CMUTILConfig.cmake  FindCMUTIL.cmake  FindUTIL.cmake  README.md
.github/workflows/: tests.yml
system_modules/: CMUTIL_NORMALIZE_GIT_URI.cmake  CMUTIL_PLATFORM_STRING.cmake  CMUTIL_PROPERTY_FILE.cmake  CMUTIL_TRAIT.cmake  CMUTIL_VERSION.cmake
test/: CMakeLists.txt  TEST.cmake
test/NORMALIZE_GIT_URI/: CMakeLists.txt
test/NORMALIZE_GIT_URI/fail/: CMakeLists.txt
test/NORMALIZE_GIT_URI/fail/invalid_http_uri/: CMakeLists.txt
test/NORMALIZE_GIT_URI/fail/invalid_ssh_uri/: CMakeLists.txt
test/NORMALIZE_GIT_URI/fail/invalid_target_type/: CMakeLists.txt
test/PROPERTY_FILE/: CMakeLists.txt  property_file.txt
test/TRAIT/: CMakeLists.txt
test/TRAIT/not_pass/: CMakeLists.txt
test/TRAIT/pass/: CMakeLists.txt
test/VERSION/: CMakeLists.txt  version.txt
test/VERSION/invalid_version/: CMakeLists.txt
test/VERSION/invalid_version_txt/: CMakeLists.txt
