
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
	CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
	PROJECT(CMUTIL_TRAIT_NOT_PAST_TEST)
ENDIF()

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../TEST.cmake")

FIND_PACKAGE(CMUTIL)



CMUTIL_VERSION_CHECK("1.58.3")



CMUTIL_VERSION_SPLIT(version "1.58.3")
IF(NOT version_MAJOR STREQUAL "1")
	MESSAGE(FATAL_ERROR " Invalid MAJOR version '${version_MAJOR}'")
ENDIF()
IF(NOT version_MINOR STREQUAL "58")
	MESSAGE(FATAL_ERROR " Invalid MINOR version '${version_MINOR}'")
ENDIF()
IF(NOT version_PATCH STREQUAL "3")
	MESSAGE(FATAL_ERROR " Invalid PATCH version '${version_PATCH}'")
ENDIF()



CMUTIL_VERSION_VALIDATE_VERSION_FILE_FOR("1.58.3")



CMUTIL_VERSION_NORMALIZE(version_normalized "1.58.3")
IF(NOT version_normalized STREQUAL "001058003")
	MESSAGE(FATAL_ERROR "Version normalized is not valid - '${version_normalized}'")
ENDIF()



TEST_INVALID_CMAKE_RUN("invalid_version")
TEST_INVALID_CMAKE_RUN("invalid_version_txt")
