IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
	CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
	PROJECT(CMUTIL_NORMALIZE_GIT_URI_INVALID_HTTP_URI_TEST)
ENDIF()

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../../")

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../TEST.cmake")

FIND_PACKAGE(CMUTIL)

CMUTIL_NORMALIZE_GIT_URI(
	URI "ftp://example.com/repo.git"
	TARGET_TYPE "SSH"
	OUTPUT_VAR result
)
